--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-:root {
-  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
 * {
   box-sizing: border-box;
-}
-
-h1 {
-  letter-spacing: 1px;
-  margin: 0;
-  color: #159a84;
-}
-
-.dr{
-  color: #214065;
-  color: #fff
 }
 
 body{
   background-color: black;
   color: wheat;
+  
+}
+
+.dr{
+  color: #214065;
+  /* color: #fff */
+}
+
+.Eryk {
+  color: #159a84;
+}
+
+h1 {
+  /* letter-spacing: 1px; */
+  margin: 0;
+  /* color: #159a84; */
+  color: #ffffff;
+  margin-bottom: 15px;
 }
 
 .App {
   text-align: center;
   background-color: black;
   color: wheat;
+}
+.scope{
+  color: #159a84;
+  cursor: pointer;
+  z-index: 0;
+}
+.sumaryCol{
+  color:red;
+  z-index: 10;
+}
+
+.summaryRow{
+  z-index: 1;
+}
+.summaryRow:hover {
+  color:orange;
+  cursor: pointer;
 }
 
