--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,18 @@
 body{
   background-color: black;
   color: wheat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+  font-family: 'Lato', sans-serif;
   
 }
 
 .dr{
   color: #214065;
-  /* color: #fff */
 }
 
 .Eryk {
@@ -20,9 +26,7 @@ body{
 }
 
 h1 {
-  /* letter-spacing: 1px; */
   margin: 0;
-  /* color: #159a84; */
   color: #ffffff;
   margin-bottom: 15px;
 }
@@ -36,14 +40,17 @@ h1 {
   color: #159a84;
   cursor: pointer;
   z-index: 0;
+ 
 }
-.sumaryCol{
+.summaryCol{
   color:red;
-  z-index: 10;
+  z-index: 2;
+ 
 }
 
 .summaryRow{
-  z-index: 1;
+  z-index: 2;
+   
 }
 .summaryRow:hover {
   color:orange;
