--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body{
+body {
   background-color: black;
   color: wheat;
   display: flex;
@@ -17,11 +17,11 @@ body{
   
 }
 
-.dr{
+.drHeder {
   color: #214065;
 }
 
-.Eryk {
+.erykHeder {
   color: #159a84;
 }
 
@@ -31,39 +31,34 @@ h1 {
   margin-bottom: 15px;
 }
 
-.App {
+.app {
   text-align: center;
   background-color: black;
   color: wheat;
 }
 
-.Table {
-  border-spacing: 0px;
-  background: #fff;
-  box-shadow: 0 1px 0 0 rgba(22, 29, 37, 0.05);
-  width: 100%;
-  
-}
-
-.DataTable {
+.dataTable {
   position: relative;
   max-width: 100vw;
-}
-
-.ScrollContainer {
-  overflow-x: auto;
-  margin-right: 145px;
   
 }
 
-.scope{
-  color: #159a84;
-  cursor: pointer;
-  z-index: 0;
+.scrollContainer {
+  overflow-x: auto;
+  margin-right: 445px;
+  
 }
 
-/* summary */
-.summaryCol{
+.headingTable {
+  color: #159a84;
+  cursor: pointer;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  
+}
+
+.summaryHeadingTable {
   color:red;
  
   background-color: black;
@@ -71,7 +66,7 @@ h1 {
   position: absolute;
   top: auto;
   right: 0;
-  width: 145px;
+  width: 445px;
   white-space: unset;
   text-align: center;
   backface-visibility: hidden;
@@ -83,15 +78,14 @@ h1 {
 }
 
 .summaryRow {
-  z-index: 2;
   background-color: black;
   backface-visibility: hidden;
   right: 0;
-  
+  margin: 0;
   position: absolute;
   top: auto;
   right: 0;
-  width: 145px;
+  width: 445px;
   
   white-space: unset;
   text-align: center;
@@ -105,7 +99,4 @@ h1 {
 
 .summaryRow:hover {
   color:orange;
-  overflow-wrap: break-word;
-  
 }
-
